Fix right-most tabs alignment

--- a/HtmlDocuments/LoginSignupCSS.css
+++ b/HtmlDocuments/LoginSignupCSS.css
@@ -25,8 +25,9 @@ input[type=submit], input[type=button]{
 input[type=submit]
 {
 	opacity: 0.6;
-   cursor: not-allowed;
+	cursor: not-allowed;
+ 
 }
-input[type=submit]:hover{
+input[type=submit]:hover, input[type=button]:hover{
 	background-color: rgb(10,100,100);
 }
